@@ -1,3 +1,7 @@
+2007-07-24  Kai Habel  <kai.habel@gmx.de>
+
+	* plot/__go_draw_axes__.m: Handle patch.
+
 2007-07-23  David Bateman  <dbateman@free.fr>
 
 	* general/rat.m: New function for ration approximation imported
